# Dawn

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  dawn.opam  dawn.opam.template  dune-project
.github/workflows/: ci.yml
editor/: eos.vim
examples/: fact.eos  rule110.eos  rule110.output  test.eos
lib/: asm.ml  assembler.ml  ast.ml  code_gen.ml  dlist.ml  dlist.mli  dune  lexer.mll  menhir_parser.mly  merge_error_messages.py  parser.messages  parser.ml  parser.mli  type_checker.ml  type_checker.mli
lib/ir/: Graph.ml  Graph.mli  asm_emit.ml  asm_emit.mli  basic_reg_allocator.ml  basic_reg_allocator.mli  debug_reg_allocator.ml  gvn.ml  integer_widening.ml  ir_printer.ml  ir_printer.mli  linker.ml  linker.mli  reg_allocator.ml  reg_allocator.mli  reg_allocator_intf.ml  registers.ml  registers.mli  sccp.ml  scheduler.ml  scheduler.mli  son.ml  son.mli  symbol_table.ml  symbol_table.mli  type_check.ml  types.ml  types.mli  variable.ml
lib/ir/mid_passes/: insert_dynamic_dispatch.ml  insert_dynamic_dispatch.mli  integer_widening.ml  sccp.ml  sccp.mli  struct_fun_args.ml  struct_fun_args.mli  struct_returns.ml  substitute_self_type.ml  substitute_self_type.mli
lib/ir/nodes/: add_node.ml  arithmetic_nodes.ml  arithmetic_nodes.mli  bitop_nodes.ml  bitop_nodes.mli  bool_nodes.ml  bool_nodes.mli  const_node.ml  const_node.mli  div_node.ml  eq_node.ml  eq_node.mli  extern_node.ml  extern_node.mli  fun_node.ml  fun_node.mli  if_node.ml  if_node.mli  loop_node.ml  loop_node.mli  machine_node.ml  machine_node.mli  mem_nodes.ml  mem_nodes.mli  mul_node.ml  mul_node.mli  node.ml  node.mli  node2.ml  node2.mli  phi_node.ml  phi_node.mli  proj_node.ml  proj_node.mli  region_node.ml  region_node.mli  scope_node.ml  scope_node.mli  start_node.ml  start_node.mli  (+3 more)
lib/logger/: logger.ml  ppx_logger.ml
src/: AST.h  Codegenerator.cpp  Codegenerator.h  Lexer.cpp  Lexer.h  Location.h  Parser.cpp  Parser.h  SoNGenerator.cpp  SoNGenerator.h  Stack.h  TestRunner.cpp  Tokens.h  Type.h  TypeChecker.cpp  TypeChecker.h  main.cpp
src/IR/: Node.h  NodeOpCodes.h  Types.cpp  Types.h
test/: bool.eosTest  dune  helloworld.eos  rule110.eos  str_param.eos  str_param.eosTest  test_codegen.ml  test_dlist.ml  test_regalloc.ml  typeCheck.eos
test/array.t/: array.eos  run.t
test/bool.t/: bool.eos  run.t
test/fact.t/: fact.eos  run.t
test/function.t/: function.eos  run.t
test/hello_world.t/: helloworld.eos  run.t
test/loop.t/: loop.eos  run.t
test/math.t/: math.eos  run.t
test/recursive_struct_return.t/: recursive_struct_return.eos  run.t
test/rule110.t/: rule110.eos  run.t
test/str_param.t/: run.t  str_param.eos
test/traits.t/: run.t  traits.eos
test/type_check.t/: run.t  type_check.eos
test_programs/: bool  bool.asm  bool.eos  helloworld  helloworld.asm  helloworld.eosTest  rule110  rule110.asm  rule110.eosTest  str_param  str_param.asm  typeCheck.eosTest
